# robotics_system_hw

./: README.md
cw1/: README.md
cw1/cw1q4/: CMakeLists.txt
cw1/cw1q4/scripts/: cw1q4_node.py
cw1/cw1q4/src/: cw1q4_43client.cpp  cw1q4_44client.cpp  cw1q4_client.cpp  cw1q4_node.cpp
cw1/cw1q4_srv/: CMakeLists.txt
cw1/cw1q5d/: CMakeLists.txt  package.xml
cw1/cw1q8b/: CMakeLists.txt
cw1_stack/cw1q5/: CMakeLists.txt  package.xml
cw1_stack/cw1q5_srv/: CMakeLists.txt  package.xml
cw1_stack/cw1q6/: CMakeLists.txt  package.xml
cw1_stack/cw1q6_srv/: CMakeLists.txt  package.xml
cw1_stack/cw1q6d/: CMakeLists.txt  package.xml
cw1_stack/cw1q7d/: CMakeLists.txt  package.xml
cw1_stack/cw1q8b/: package.xml
cw2/: README.md
cw2/cw2q4/: CMakeLists.txt  package.xml
cw2/cw2q5/: CMakeLists.txt  package.xml
cw2/youbot_trail_rviz_cw2/: CMakeLists.txt
cw2_stack/cw2q3/: CMakeLists.txt  package.xml  setup.py
cw2_stack/cw2q4/: CMakeLists.txt  package.xml
cw2_stack/youbot_trail_rviz_cw2/: CMakeLists.txt
cw3/: README.md
cw3/cw3q1/: CMakeLists.txt  package.xml
cw3/cw3q2/: CMakeLists.txt  package.xml
cw3/cw3q2/include/cw3q2/: iiwa14Kine.h
cw3/cw3q2/kdl_kine/: kdl_kine_solver.py
cw3/cw3q2/src/: DH_param_checker.cpp  iiwa14Kine.cpp  iiwa_kine_checker_node.cpp  kdl_kine_solver.cpp
cw3/cw3q2/src/cw3q2/: iiwa14Kine.py
cw3/cw3q4/: CMakeLists.txt  package.xml
cw3/cw3q5/: CMakeLists.txt  package.xml
cw3/cw3q5/msg/: test_msg.msg
cw3/cw3q5/src/: cw3q5a.cpp  cw3q5b.cpp
cw3_stack/cw3q1/: setup.py
cw3_stack/cw3q2/: CMakeLists.txt  package.xml
cw3_stack/cw3q3/: CMakeLists.txt  package.xml
cw3_stack/cw3q3/scripts/: cw3q3_node.py
cw3_stack/cw3q3/src/: cw3q3.cpp
dummy_package/: CMakeLists.txt  package.xml
dummy_package/src/: main.cpp
kdl_kine/src/: kdl_kine_solver.cpp
kine_checker/: CMakeLists.txt  package.xml
kine_checker/launch/: kine_checker_cpp.launch  kine_checker_py.launch
kine_checker/scripts/: kine_checker_node.py
kine_checker/src/: kine_checker_node (copy).cpp  kine_checker_node.cpp
lab01_stack/youbot_rviz_example/: CMakeLists.txt
lab01_stack/youbot_teleop_example/: CMakeLists.txt  package.xml
lab01_stack/youbot_traj_example/: CMakeLists.txt  package.xml
lab02/: README.md
lab02/lab02_example01/: CMakeLists.txt
lab02/lab02_task01/: CMakeLists.txt
lab02/lab02_task02/: CMakeLists.txt  package.xml
lab02/lab02_task03/: package.xml
lab02/lab02example01/: CMakeLists.txt  package.xml
lab02/lab02example04/: CMakeLists.txt  package.xml
lab02/lab02task01/: CMakeLists.txt  package.xml
lab02/lab02task02/: CMakeLists.txt  package.xml
lab02/lab02task02/scripts/: publisher_node.py
lab02/lab02task03/: CMakeLists.txt  package.xml
lab02_stack/example01/: CMakeLists.txt  package.xml
lab02_stack/example02/: CMakeLists.txt  package.xml
lab02_stack/example03/: CMakeLists.txt
lab02_stack/lab02_example01/: package.xml
lab02_stack/lab02_example02/: CMakeLists.txt  package.xml
lab02_stack/lab02_task03/: CMakeLists.txt
lab02_stack/ros_pubsub_tutorials/: CMakeLists.txt  package.xml
lab02_stack/task01/: CMakeLists.txt  package.xml
lab02_stack/task02/: CMakeLists.txt  package.xml
lab02_stack/task03/: CMakeLists.txt  package.xml
lab03/example_msg_srv/: CMakeLists.txt  package.xml
lab03/lab03_example01/: CMakeLists.txt  package.xml
lab03/lab03_example02/: CMakeLists.txt
lab03/lab03_task02/: CMakeLists.txt  package.xml
lab03/lab03_task03/: CMakeLists.txt  package.xml
lab03/lab03_task03_srv/: CMakeLists.txt
lab03/lab03example01/: CMakeLists.txt  package.xml
lab03/lab03example02/: CMakeLists.txt  package.xml
lab03/lab03task01/: CMakeLists.txt  package.xml
lab03/lab03task01/scripts/: lab03_task01_srv_node.py
lab03/lab03task01/src/: lab03_task01_srv_node.cpp
lab03/lab03task02/: CMakeLists.txt  package.xml
lab03/lab03task02srv/: CMakeLists.txt  package.xml
lab03_stack/: README.md
lab03_stack/example_msg_srv/: CMakeLists.txt
lab03_stack/lab03_example01/: CMakeLists.txt
lab03_stack/lab03_example02/: CMakeLists.txt  package.xml
lab03_stack/lab03_task01/: CMakeLists.txt  package.xml
lab03_stack/lab03_task02/: CMakeLists.txt
lab03_stack/lab03_task02/scripts/: lab03_task02_pub_node.py
lab03_stack/lab03_task02/src/: lab03_task02_pub_node.cpp  lab03_task02_sub_node.cpp
lab03_stack/lab03_task03/: CMakeLists.txt
lab03_stack/lab03_task03_srv/: package.xml
lab03_stack/test_package/: CMakeLists.txt  package.xml
lab04/lab04_example01/: package.xml
lab04/lab04_task01/: CMakeLists.txt  package.xml
lab04/lab04_task02/: CMakeLists.txt
lab04/lab04example01/: CMakeLists.txt  package.xml
lab04/lab04example02/: CMakeLists.txt  package.xml
lab04/lab04example02/launch/: lab04example02cpp.launch  lab04example02py.launch
lab04/lab04task01/: CMakeLists.txt  package.xml
lab04/lab04task02/: CMakeLists.txt  package.xml
lab04/lab04task02/launch/: lab04task02cpp.launch  lab04task02py.launch
lab04/lab04task02/scripts/: lab04task02_node.py
lab04_stack/lab04_example01/: CMakeLists.txt
lab04_stack/lab04_example02/: CMakeLists.txt  package.xml
lab04_stack/lab04_task02/: package.xml
lab05/: README.md
lab05/lab05_task01/: CMakeLists.txt
lab05/lab05task01/: CMakeLists.txt  package.xml
lab05_stack/lab05_task01/: package.xml
lab06/lab06_example01/: setup.py
lab06/lab06_task01/: setup.py
lab06/lab06_task02/: package.xml  setup.py
lab06/lab06example01/: CMakeLists.txt  package.xml  setup.py
lab06/lab06task01/: CMakeLists.txt  package.xml  (+1 more)
lab07/: example00_data.bag
lab07_stack/: lab7data.bag
lab_solutions/sol_lab2task3/: CMakeLists.txt  package.xml
lab_solutions/sol_lab2task3/launch/: lab02task03cpp.launch  lab02task03py.launch
lab_solutions/sol_lab2task3/scripts/: publisher_node.py
lab_solutions/sol_lab2task3/src/: subscriber_node.cpp
youbot_stack/: README.md
youbot_stack/youbot_kinematic/: CMakeLists.txt  package.xml
youbot_stack/youbot_kinematic/include/: YoubotKDL.h  YoubotKinematics.h
youbot_stack/youbot_kinematic/src/: YoubotKDL.cpp  YoubotKinematics.cpp
(+262 files in other folders)
